--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,2 +1,12 @@
 @import "./reset";
 @import "tops/index";
+@import "tops/header";
+@import "tops/footer";
+@import "products/card";
+@import "products/plusbuttom";
+@import "products/products_submit";
+@import "products/details";
+@import "products/foreachproducts";
+@import "modules/user";
+@import "config/colors";
+@import "modules/flash";
