--- a/app/assets/stylesheets/tops/index.scss
+++ b/app/assets/stylesheets/tops/index.scss
@@ -1,3 +1,8 @@
+* {
+  box-sizing: border-box;
+  background-repeat: no-repeat;
+}
+
 .body{
   position: relative;
   min-height: 100%;
@@ -17,6 +22,7 @@
     border-image: initial;
     font: inherit;
     box-sizing: border-box;
+    background-color: #FFFFFF;
     &--tops{
       vertical-align: baseline;
     padding: 0px;
@@ -25,6 +31,190 @@
     border-color: initial;
     border-image: initial;
     font: inherit;
+    background-color: #FFFFFF;
+    overflow: scroll;
+    // background-image: image-url("wagara.jpg");
+    // background-size: cover;
+    &--images{
+      height: 500px;
+      background-image: image-url("robot.jpg");
+      background-size: cover;
+      margin-top: 15px;
+      // background-color: #FFFFFF;
+      position: relative;
+      box-shadow: 10px 10px 10px rgba(0,0,0,0.4); 
+      &--descriptionbox{
+        display: inline-block;
+        text-align: center;
+        height: 200px;
+        width: 400px;
+        background: rgba(0,0,0,0.6);
+        padding: 70px 20px;
+        position: absolute;
+        top:30%;
+        left:36%;
+        &--description{
+          font-weight: 400;
+          height: 3em;
+          line-height: 1.5;
+          word-break: break-word;
+          font-size:20px;
+          color:#FAFAFA;
+        }
+        }
+      }
+      &--machinenamebox{
+        width: 100%;
+        height: 300px;
+        display: inline-block;
+        text-align: center;
+        padding-top: 70px;
+        &--machinename{
+          display: inline-block;
+          text-align: center;
+          height: 80px;
+          width: 350px;
+          background-color: #4267B2;
+          border-radius: 50px;
+          box-shadow: 10px 10px 10px rgba(0,0,0,0.4); 
+          &--machinename2{
+          display: inline-block;
+          font-size:40px;
+          font-weight: 800px;
+          color: #fafafa;
+          margin-top: 20px;
+          text-shadow: 5px 5px 5px rgba(0,0,0,0.4); 
+          }
+        }
+        &--yearbox{
+          background-color: #4267B2;
+          margin-top: 20px;
+          height: 80px;
+          width: 100%;
+          padding-top: 12px;
+          padding-left: 39.8%;
+          box-shadow: 10px 10px 10px rgba(0,0,0,0.4); 
+          &--productyearbox{
+            display: flex;
+            height: 50px;
+            width: 300px;
+            position: relative;
+          &--productyear{
+            position: absolute;
+            left: 0;
+            bottom: 5px;
+            display: inline-block;
+            color:#FAFAFA;
+            font-size:30px;
+          }
+          &--productyear2{
+            position: absolute;
+            right:80px;
+            bottom: 0;
+            height: 40px;
+            width: 60px;
+          }
+          &--productbutton{
+            position: absolute;
+            right:0;
+            bottom: 0;
+            height: 40px;
+            width: 60px;
+            border-radius: 6px;
+            background-color:#8ECDF4;
+            font-size:20px;
+            font-weight: bold;
+            color: #FAFAFA;
+            cursor: pointer;
+          outline: 0;
+          &:focus{
+            background-color: grey;
+            transition: all 1s ease-out;
+            border: none;
+            outline: 0;
+          }
+          }
+          }
+        }
+      }
+      &--machinebox{
+        width: 100%;
+        display: flex;
+        &--machineno01{
+          width: 50%;
+          // height: 500px;
+          border-right: 8px #4267B2 solid;
+          &--number01box{
+            display: inline-block;
+            text-align: center;
+            padding-top: 30px;
+            width: 100%;
+            height: 100px;
+            background-color: #4267B2;
+            &--number01{
+              display: inline-block;
+              color:#FAFAFA;
+              font-size:40px;
+              text-shadow: 5px 5px 5px rgba(0,0,0,0.4); 
+            }
+          }
+          &--yearyearbox{
+            display: inline-block;
+            padding-top: 30px;
+            padding-left: 100px;
+            width: 100%;
+            height: 100px;
+            border-bottom: 0.8px #4267B2 solid;
+            // background-color: #4267B2;
+            &--yearyear{
+              display: flex;
+              height: 40px;
+              width: 100%;
+              // background-color: #4267B2;
+              &--yearyearyear{
+                display: inline-block;
+                font-size:40px;
+                width: 100px;
+              }
+              &--yearlogo{
+                font-size:40px;
+              }
+              &--month{
+                font-size:40px;
+                cursor: pointer;
+                a{
+                  font-size:40px;
+                  color: #333333;
+                  text-decoration: none;
+                }
+              }
+            }
+          }
+          &--monthbox{
+            display: inline-block;
+            text-align: center;
+            padding-top: 30px;
+            // background-color: #4267B2;
+            width: 100%;
+            height: 100px;
+            border-bottom: 0.8px #4267B2 solid;
+            &--monthmonth{
+              font-size:40px;
+              cursor: pointer;
+            }
+          }
+          &--cardbox{
+            width: 100%;
+            min-height: 60px;
+            padding: 10px;
+            // background-color: #4267B2;
+            border-bottom: 0.8px #4267B2 solid;
+            display: flex;
+            flex-wrap: wrap;
+            
+          }
+        }
+      }
     }
   }
 }
