--- a/app/views/products/details.html.haml
+++ b/app/views/products/details.html.haml
@@ -42,7 +42,7 @@
                   生産者
               .box__productsbox
                 .box__productsbox--productsbox2
-                  423171-10820
+                  222222-22222
                 .box__productsbox--productsbox3
                   .box__productsbox--productsbox3--kazu
                     200
@@ -68,7 +68,7 @@
                     岡田公彦
               .box__productsbox
                 .box__productsbox--productsbox2
-                  423171-10940
+                  222222-22222
                 .box__productsbox--productsbox3
                   .box__productsbox--productsbox3--kazu
                     700
@@ -94,7 +94,7 @@
                     岡田公彦
               .box__productsbox
                 .box__productsbox--productsbox2
-                  423172-10310②
+                  222222-22222②
                 .box__productsbox--productsbox3
                   .box__productsbox--productsbox3--kazu
                     200
@@ -122,7 +122,7 @@
                 .box__memotext--memorymemo
                   メモ
                 .box__memotext--memobox
-                  例>>今日の10310②は合計500個の内200個なので、明日残りの300個から
+                  例>>今日の222222-22222②は合計500個の内200個なので、明日残りの300個から
               .box__totalbox
                 .box__totalbox--totaltext
                   総生産数：
