--- a/app/assets/stylesheets/products/products_submit.scss
+++ b/app/assets/stylesheets/products/products_submit.scss
@@ -56,6 +56,7 @@
         font-weight: 500;
         color: #FFFFFF;
         text-shadow: 5px 5px 5px rgba(0,0,0,0.4); 
+        position: relative;
         }
       &--namebox {
         font-size: 20px;
@@ -81,6 +82,7 @@
         font-size: 20px;
         font-weight: 500;
         width: 330px;
+        height: 40px;
         margin-left: 20px;
         box-shadow: 10px 10px 10px rgba(0,0,0,0.4); 
       }
@@ -185,7 +187,7 @@
   border-radius: 15px;
   box-shadow: 10px 10px 10px rgba(0,0,0,0.4); 
 }
-.submitbuttom{
+.buttom{
   border: 1px solid #ea352b;
   border-radius: 15px;
   display: inline-block;
@@ -226,4 +228,15 @@
     display: inline-block;
     margin: 0 auto;
   }
+}
+#name_select{
+  position: absolute;
+  top:0;
+  // right: 0;
+  font-size: 20px;
+  height: 40px;
+  font-weight: 500;
+  width: 330px;
+  margin-left: 20px;
+  box-shadow: 10px 10px 10px rgba(0,0,0,0.4); 
 }
