--- a/app/views/products/_card.html.haml
+++ b/app/views/products/_card.html.haml
@@ -2,6 +2,6 @@
   .numbername
     .numbercard
       .numbercard--numberboxbox
-        -# = products.production_day
+        -# = production_day
   -# .numbercard--numberboxbox--numbername
   -#   岡田公彦
