--- a/app/views/products/products_submit.html.haml
+++ b/app/views/products/products_submit.html.haml
@@ -26,128 +26,132 @@
               稼働時間　：
             = f.select :operating_time, Product.operating_times.keys.to_a,{prompt: "---"}, {class: 'conteiner__datebox--machinenumberbox--machineno',id:'operating_time'}
           .space
-          .conteiner__datebox--productsnumberbox
-            .conteiner__datebox--productsnumberbox--productsname
-              1.製品番号：
-            = f.text_field :product_no, {placeholder:" 製品番号を書いて下さい", class: "conteiner__datebox--productsnumberbox--productnumber" }
-            = f.text_field :number_of_production, {placeholder:" 個数", class: "conteiner__datebox--productsnumberbox--numbernumernumer" }
-            .conteiner__datebox--productsnumberbox--texttext
-              個
-          .conteiner__datebox--tsnumberbox
-            .conteiner__datebox--tsnumberbox--texttexttext
-              溶接不良数：
-            = f.text_field :defective, {placeholder:" 今日の溶接不良数です。", class: "conteiner__datebox--tsnumberbox--numbeproduction" }
-            .conteiner__datebox--tsnumberbox--numbeproducti
-              個
-          .conteiner__datebox--tsnumberbox
-            .conteiner__datebox--tsnumberbox--texttexttext
-              廃棄数　　：
-            = f.text_field :waste, {placeholder:" 今日の廃棄品数です。", class: "conteiner__datebox--tsnumberbox--numbeproduction" }
-            .conteiner__datebox--tsnumberbox--numbeproducti
-              個
-          .conteiner__datebox--usernamebox
-            .conteiner__datebox--usernamebox--username
-              生産者　　：
-              = f.collection_select :producer, User.all,:id,:name,{prompt: "---"},{id:'name_select'}
-          .conteiner__datebox--usernamebox
-            .conteiner__datebox--usernamebox--username
-              生産者　　：
-              = f.collection_select :producer, User.all,:id,:name,{prompt: "---"},{id:'name_select'}
-          .space
-          .conteiner__datebox--productsnumberbox
-            .conteiner__datebox--productsnumberbox--productsname
-              2.製品番号：
-            = f.text_field :product_no, {placeholder:" 製品番号を書いて下さい", class: "conteiner__datebox--productsnumberbox--productnumber" }
-            = f.text_field :number_of_production, {placeholder:" 個数", class: "conteiner__datebox--productsnumberbox--numbernumernumer" }
-            .conteiner__datebox--productsnumberbox--texttext
-              個
-          .conteiner__datebox--tsnumberbox
-            .conteiner__datebox--tsnumberbox--texttexttext
-              溶接不良数：
-            = f.text_field :defective, {placeholder:" 今日の溶接不良数です。", class: "conteiner__datebox--tsnumberbox--numbeproduction" }
-            .conteiner__datebox--tsnumberbox--numbeproducti
-              個
-          .conteiner__datebox--tsnumberbox
-            .conteiner__datebox--tsnumberbox--texttexttext
-              廃棄数　　：
-            = f.text_field :waste, {placeholder:" 今日の廃棄品数です。", class: "conteiner__datebox--tsnumberbox--numbeproduction" }
-            .conteiner__datebox--tsnumberbox--numbeproducti
-              個
-          .conteiner__datebox--usernamebox
-            .conteiner__datebox--usernamebox--username
-              生産者　　：
-              = f.collection_select :producer, User.all,:id,:name,{prompt: "---"},{id:'name_select'}
-          .conteiner__datebox--usernamebox
-            .conteiner__datebox--usernamebox--username
-              生産者　　：
-              = f.collection_select :producer, User.all,:id,:name,{prompt: "---"},{id:'name_select'}
-          .space
-          .conteiner__datebox--productsnumberbox
-            .conteiner__datebox--productsnumberbox--productsname
-              3.製品番号：
-            = f.text_field :product_no, {placeholder:" 製品番号を書いて下さい", class: "conteiner__datebox--productsnumberbox--productnumber" }
-            = f.text_field :number_of_production, {placeholder:" 個数", class: "conteiner__datebox--productsnumberbox--numbernumernumer" }
-            .conteiner__datebox--productsnumberbox--texttext
-              個
-          .conteiner__datebox--tsnumberbox
-            .conteiner__datebox--tsnumberbox--texttexttext
-              溶接不良数：
-            = f.text_field :defective, {placeholder:" 今日の溶接不良数です。", class: "conteiner__datebox--tsnumberbox--numbeproduction" }
-            .conteiner__datebox--tsnumberbox--numbeproducti
-              個
-          .conteiner__datebox--tsnumberbox
-            .conteiner__datebox--tsnumberbox--texttexttext
-              廃棄数　　：
-            = f.text_field :waste, {placeholder:" 今日の廃棄品数です。", class: "conteiner__datebox--tsnumberbox--numbeproduction" }
-            .conteiner__datebox--tsnumberbox--numbeproducti
-              個
-          .conteiner__datebox--usernamebox
-            .conteiner__datebox--usernamebox--username
-              生産者　　：
-              = f.collection_select :producer, User.all,:id,:name,{prompt: "---"},{id:'name_select'}
-          .conteiner__datebox--usernamebox
-            .conteiner__datebox--usernamebox--username
-              生産者　　：
-              = f.collection_select :producer, User.all,:id,:name,{prompt: "---"},{id:'name_select'}
-          .space
-          .conteiner__datebox--productsnumberbox
-            .conteiner__datebox--productsnumberbox--productsname
-              4.製品番号：
-            = f.text_field :product_no, {placeholder:" 製品番号を書いて下さい", class: "conteiner__datebox--productsnumberbox--productnumber" }
-            = f.text_field :number_of_production, {placeholder:" 個数", class: "conteiner__datebox--productsnumberbox--numbernumernumer" }
-            .conteiner__datebox--productsnumberbox--texttext
-              個
-          .conteiner__datebox--tsnumberbox
-            .conteiner__datebox--tsnumberbox--texttexttext
-              溶接不良数：
-            = f.text_field :defective, {placeholder:" 今日の溶接不良数です。", class: "conteiner__datebox--tsnumberbox--numbeproduction" }
-            .conteiner__datebox--tsnumberbox--numbeproducti
-              個
-          .conteiner__datebox--tsnumberbox
-            .conteiner__datebox--tsnumberbox--texttexttext
-              廃棄数　　：
-            = f.text_field :waste, {placeholder:" 今日の廃棄品数です。", class: "conteiner__datebox--tsnumberbox--numbeproduction" }
-            .conteiner__datebox--tsnumberbox--numbeproducti
-              個
-          .conteiner__datebox--usernamebox
-            .conteiner__datebox--usernamebox--username
-              生産者　　：
-              = f.collection_select :producer, User.all,:id,:name,{prompt: "---"},{id:'name_select'}
-          .conteiner__datebox--usernamebox
-            .conteiner__datebox--usernamebox--username
-              生産者　　：
-              = f.collection_select :producer, User.all,:id,:name,{prompt: "---"},{id:'name_select'}
-          .space
+          .box01
+            .conteiner__datebox--productsnumberbox
+              .conteiner__datebox--productsnumberbox--productsname
+                1.製品番号：
+              = f.text_field :product_no, {placeholder:" 製品番号を書いて下さい", class: "conteiner__datebox--productsnumberbox--productnumber",id:"product_no1" }
+              = f.text_field :number_of_production, {placeholder:" 個数", class: "conteiner__datebox--productsnumberbox--numbernumernumer",id:"number_of_production1" }
+              .conteiner__datebox--productsnumberbox--texttext
+                個
+            .conteiner__datebox--tsnumberbox
+              .conteiner__datebox--tsnumberbox--texttexttext
+                溶接不良数：
+              = f.text_field :defective, {placeholder:" 今日の溶接不良数です。", class: "conteiner__datebox--tsnumberbox--numbeproduction",id:"defective1" }
+              .conteiner__datebox--tsnumberbox--numbeproducti
+                個
+            .conteiner__datebox--tsnumberbox
+              .conteiner__datebox--tsnumberbox--texttexttext
+                廃棄数　　：
+              = f.text_field :waste, {placeholder:" 今日の廃棄品数です。", class: "conteiner__datebox--tsnumberbox--numbeproduction",id:"waste1" }
+              .conteiner__datebox--tsnumberbox--numbeproducti
+                個
+            .conteiner__datebox--usernamebox
+              .conteiner__datebox--usernamebox--username
+                生産者　　：
+                = f.collection_select :producer, User.all,:id,:name,{prompt: "---"},{id:'name_select1-1'}
+            #producer1-2.conteiner__datebox--usernamebox
+              .conteiner__datebox--usernamebox--username
+                生産者　　：
+                = f.collection_select :producer02, User.all,:id,:name,{prompt: "---"},{id:'name_select1-2'}
+            .space
+          #box02.box02
+            .conteiner__datebox--productsnumberbox
+              .conteiner__datebox--productsnumberbox--productsname
+                2.製品番号：
+              = f.text_field :product_no, {placeholder:" 製品番号を書いて下さい", class: "conteiner__datebox--productsnumberbox--productnumber",id:"product_no2" }
+              = f.text_field :number_of_production, {placeholder:" 個数", class: "conteiner__datebox--productsnumberbox--numbernumernumer",id:"number_of_production2" }
+              .conteiner__datebox--productsnumberbox--texttext
+                個
+            .conteiner__datebox--tsnumberbox
+              .conteiner__datebox--tsnumberbox--texttexttext
+                溶接不良数：
+              = f.text_field :defective, {placeholder:" 今日の溶接不良数です。", class: "conteiner__datebox--tsnumberbox--numbeproduction",id:"defective2"}
+              .conteiner__datebox--tsnumberbox--numbeproducti
+                個
+            .conteiner__datebox--tsnumberbox
+              .conteiner__datebox--tsnumberbox--texttexttext
+                廃棄数　　：
+              = f.text_field :waste, {placeholder:" 今日の廃棄品数です。", class: "conteiner__datebox--tsnumberbox--numbeproduction",id:"waste2" }
+              .conteiner__datebox--tsnumberbox--numbeproducti
+                個
+            .conteiner__datebox--usernamebox
+              .conteiner__datebox--usernamebox--username
+                生産者　　：
+                = f.collection_select :producer, User.all,:id,:name,{prompt: "---"},{id:'name_select2-1'}
+            #producer2-2.conteiner__datebox--usernamebox
+              .conteiner__datebox--usernamebox--username
+                生産者　　：
+                = f.collection_select :producer02, User.all,:id,:name,{prompt: "---"},{id:'name_select2-2'}
+            .space
+          #box03.box03
+            .conteiner__datebox--productsnumberbox
+              .conteiner__datebox--productsnumberbox--productsname
+                3.製品番号：
+              = f.text_field :product_no, {placeholder:" 製品番号を書いて下さい", class: "conteiner__datebox--productsnumberbox--productnumber",id:"product_no3" }
+              = f.text_field :number_of_production, {placeholder:" 個数", class: "conteiner__datebox--productsnumberbox--numbernumernumer",id:"number_of_production3" }
+              .conteiner__datebox--productsnumberbox--texttext
+                個
+            .conteiner__datebox--tsnumberbox
+              .conteiner__datebox--tsnumberbox--texttexttext
+                溶接不良数：
+              = f.text_field :defective, {placeholder:" 今日の溶接不良数です。", class: "conteiner__datebox--tsnumberbox--numbeproduction",id:"defective3"}
+              .conteiner__datebox--tsnumberbox--numbeproducti
+                個
+            .conteiner__datebox--tsnumberbox
+              .conteiner__datebox--tsnumberbox--texttexttext
+                廃棄数　　：
+              = f.text_field :waste, {placeholder:" 今日の廃棄品数です。", class: "conteiner__datebox--tsnumberbox--numbeproduction",id:"waste3" }
+              .conteiner__datebox--tsnumberbox--numbeproducti
+                個
+            .conteiner__datebox--usernamebox
+              .conteiner__datebox--usernamebox--username
+                生産者　　：
+                = f.collection_select :producer, User.all,:id,:name,{prompt: "---"},{id:'name_select3-1'}
+            #producer3-2.conteiner__datebox--usernamebox
+              .conteiner__datebox--usernamebox--username
+                生産者　　：
+                = f.collection_select :producer02, User.all,:id,:name,{prompt: "---"},{id:'name_select3-2'}
+            .space
+          #box04.box04
+            .conteiner__datebox--productsnumberbox
+              .conteiner__datebox--productsnumberbox--productsname
+                4.製品番号：
+              = f.text_field :product_no, {placeholder:" 製品番号を書いて下さい", class: "conteiner__datebox--productsnumberbox--productnumber",id:"product_no4" }
+              = f.text_field :number_of_production, {placeholder:" 個数", class: "conteiner__datebox--productsnumberbox--numbernumernumer",id:"number_of_production4" }
+              .conteiner__datebox--productsnumberbox--texttext
+                個
+            .conteiner__datebox--tsnumberbox
+              .conteiner__datebox--tsnumberbox--texttexttext
+                溶接不良数：
+              = f.text_field :defective, {placeholder:" 今日の溶接不良数です。", class: "conteiner__datebox--tsnumberbox--numbeproduction",id:"defective4"}
+              .conteiner__datebox--tsnumberbox--numbeproducti
+                個
+            .conteiner__datebox--tsnumberbox
+              .conteiner__datebox--tsnumberbox--texttexttext
+                廃棄数　　：
+              = f.text_field :waste, {placeholder:" 今日の廃棄品数です。", class: "conteiner__datebox--tsnumberbox--numbeproduction",id:"waste4" }
+              .conteiner__datebox--tsnumberbox--numbeproducti
+                個
+            .conteiner__datebox--usernamebox
+              .conteiner__datebox--usernamebox--username
+                生産者　　：
+                = f.collection_select :producer, User.all,:id,:name,{prompt: "---"},{id:'name_select4-1'}
+            #producer4-2.conteiner__datebox--usernamebox
+              .conteiner__datebox--usernamebox--username
+                生産者　　：
+                = f.collection_select :producer02, User.all,:id,:name,{prompt: "---"},{id:'name_select4-2'}
+            .space
           .conteiner__datebox--tsnumberbox
             .conteiner__datebox--tsnumberbox--texttexttext
               総数　　　：
-            = f.text_field :total_production, {placeholder:" 今日の総生産です。", class: "conteiner__datebox--tsnumberbox--numbeproduction" }
+            = f.text_field :total_production, {placeholder:" 今日の総生産です。", class: "conteiner__datebox--tsnumberbox--numbeproduction",id:"total_production"}
             .conteiner__datebox--tsnumberbox--numbeproducti
               個
           .textbox
             .textbox__memobox
               メモ
-            = f.text_area :description, {placeholder:"例>>今日の10310②は合計500個の内200個なので、明日残りの300個から", class: "textbox__memoboxbox"}
+            = f.text_area :description, {placeholder:"例>>今日の10310②は合計500個の内200個なので、明日残りの300個から", class: "textbox__memoboxbox",id:"description"}
             = f.submit  "送信",class: "buttom"
       .toppagereturn
         = link_to root_path do
